# privacy-sandbox-aggregation-service

./: .bazelrc  .gcloudignore  .gitignore  BUILD  CONTRIBUTING.md  README.md  WORKSPACE.bazel  deps.bzl  go.mod
build-scripts/aws/terraform/: codebuild.auto.tfvars  main.tf
ci/: cloudbuild.yaml
ci/bazel-build-container/: Dockerfile  README.md
cloudbuild/: cloudbuild.yaml
cloudbuild/bazel-build-container/: Dockerfile  README.md  cloudbuild.yaml
control-plane/: .babelrc  .firebaserc  .firebaserc.sample  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules  package.json  webpack.config.js
control-plane/.firebase/: hosting.ZGlzdA.cache
control-plane/.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
control-plane/src/: auth-functions.js  button-clicks.js  example.config.js  index.js  jobs-functions.js  jobs-functions.test.js  values.js
control-plane/src/components/: AddLevel.js  Auth.js  Job.js  JobAndLogs.js  Jobs.js  Level.js  Levels.js  Log.js  Login.js  Logs.js  PendingUser.js  Signup.js  UpdateLevel.js  User.js  UserManagement.js  Waiting.js
control-plane/src/styles/: auth.css  index.css
control_plane/: README.md
encryption/: BUILD  cbytes.h  cbytes_utils.cc  cbytes_utils.h  crypto.proto  cryptoio.go  cryptoio_test.go  distributed_point_function_c_bridge.cc  distributed_point_function_c_bridge.h  distributed_point_function_c_bridge_test.cc  distributednoise.go  distributednoise_test.go  incrementaldpf.go  incrementaldpf_test.go  standardencrypt.go
encryption/testdata/chrome/: private_key.txt  public_key.json
internal/: BUILD  dpf_generate_raw_conversion.go  dpf_pipeline_integration_test.go  dpfprocess.go  dpfprocess_test.go  generate_test_data_pipeline.go  onepartyprocess.go  onepartyprocess_test.go
pipeline/: BUILD  aggregate_partial_report.go  browsersimulator.go  browsersimulator_test.go  cbytes_utils.cc  cbytes_utils.h  conversion.go  conversion_test.go  conversionaggregator.go  conversionaggregator_test.go  create_hybrid_key_pair.go  crypto.proto  cryptoio.go  cryptoio_test.go  distributed_point_function_c_bridge.cc  distributed_point_function_c_bridge.h  distributed_point_function_c_bridge_test.cc  distributednoise.go  distributednoise_test.go  dpf_aggregate_partial_report.go  dpf_aggregate_partial_report_pipeline.go  dpf_aggregate_reach_partial_report_pipeline.go  dpf_generate_partial_report.go  dpf_generate_raw_conversion.go  dpf_merge_partial_aggregation.go  dpf_merge_partial_aggregation_pipeline.go  dpf_pipeline_benchmark_test.go  dpf_pipeline_integration_test.go  dpf_test_conversion_data.csv  dpfaggregator.go  dpfaggregator_test.go  dpfbrowsersimulator.go  dpfbrowsersimulator_test.go  dpfdataconverter.go  dpfdataconverter_test.go  elgamal_encrypt.cc  elgamal_encrypt.h  elgamal_encrypt_c_bridge.cc  elgamal_encrypt_c_bridge.h  elgamal_encrypt_testing.cc  (+38 more)
report/: BUILD  reportutils.go  reportutils_test.go
service/: BUILD  aggregation_query_tool.go  aggregator_server.go  aggregatorservice.go  browser_simulator.go  collector_server.go  collectorservice.go  collectorservice_test.go  create_crypto_key.go  exam_data.go  jobmonitor.go  query.go  query_test.go  server.go  service.go  service.proto  simulate_reporter_hierarchical_aggregation.go  simulate_reporter_hierarchical_aggregation_pubsub.go  simulate_reporter_partial_aggregation.go  utils.go  utils_test.go
shared/: BUILD  reporttypes.go  reporttypes_test.go  utils.go  utils_test.go
terraform/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
terraform/aws/: applications  modules
terraform/aws/environments/: demo  shared
terraform/aws/environments/dev/: BUILD  README.md  dev.auto.tfvars  main.tf  self_build_params.auto.tfvars
terraform/modules/aggregator/: aggregator.tf  outputs.tf  variables.tf
terraform/modules/collector/: collector.tf  outputs.tf  variables.tf
terraform/modules/gcs/: gcs.tf  output.tf  variables.tf
terraform/modules/gke/: gke.tf  network.tf  outputs.tf  variables.tf
terraform/modules/pubsub/: outputs.tf  pubsub.tf  variables.tf
terraform/modules/simulator/: outputs.tf  simulator.tf  variables.tf
terraform/variables/: sample.tfvars
test/: BUILD  README.md  benchmark.sh  create_fake_firestore_jobs.go  dpf_pipeline_integration_test.go  dpf_reach_test_conversion_data.csv  dpf_test_conversion_data.csv  dpfdataconverter.go  dpfdataconverter_test.go  generate_reach_test_data_pipeline.go  generate_test_data_pipeline.go  local_deploy.sh  onepartydataconverter.go  onepartydataconverter_test.go  pipeline_integration_test.go  reachdataconverter.go  reachdataconverter_test.go
tools/: BUILD  aggregation_query_tool.go  browser_simulator.go  create_hybrid_key_pair.go  dpf_generate_raw_conversion.go  dpf_merge_partial_aggregation_pipeline.go  dpfconvert.go  dpfconvert_test.go  onepartyconvert.go  onepartyconvert_test.go  simulate_reporter_hierarchical_aggregation.go  simulate_reporter_hierarchical_aggregation_pubsub.go
utils/: BUILD  utils.go  utils_test.go
